# ragmarket

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.claude/skills/push-release/: SKILL.md
.github/workflows/: release.yml
public/db/: dp-item.json
scripts/: tauri-cli.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  connections.rs  lib.rs  logger.rs  main.rs  market.rs  packet.rs  process.rs
src/components/: ClientPicker.tsx  FavoritesNotifyBar.tsx  FavoritesView.tsx  FilterSidebar.tsx  ItemLinks.tsx  MainTabs.tsx  Modal.tsx  MyItemsView.tsx  PriceDistributionModal.tsx  ResultsTable.tsx  ServerPicker.tsx  SortableTable.tsx  StarButton.tsx  UpdateBanner.tsx  WatcherHelpModal.tsx  WatcherSetupModal.tsx  itemColumns.tsx
src/hooks/: useCapture.ts  useDiscoveredClients.ts  useFavorites.ts  useItemNames.ts  useLatestRelease.ts  useNotifyConfig.ts  usePersistentValue.ts  useServerPref.ts  useWatcherScheduler.ts  useWatchers.ts
src/lib/: bytes.ts  invoke.ts  itemName.test.ts  itemName.ts  links.ts  marketDepth.test.ts  marketDepth.ts  runPool.ts  types.ts  updates.ts
src/lib/notify/: evaluator.test.ts  evaluator.ts  ntfy.ts  winNotify.ts
src/services/: divinePride.ts  inventoryParser.test.ts  inventoryParser.ts  parser.test.ts  parser.ts  randomOptions.ts
src/shared/: random_options.json
tools/: find_coords.py  find_coords_v2.py  verify_coords.py
