[package]
name = "ragmarket"
version = "0.3.0"
description = "Read-only viewer for Ragnarok Online vending-store search results"
authors = ["adson"]
edition = "2021"

[lib]
name = "ragmarket_lib"
# Desktop-only build. The mobile-style crate-types are unnecessary and
# triple our compile time on CI.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
